# closed-context-retrieval

./: .gitignore  README.md  config.yaml  docker-compose.yaml  pyproject.toml
scripts/: debug.py  setup.py
src/: __main__.py  bot.py  config.py  conversation.py  llama.py
src/chat/: messages.py  store.py  util.py
src/db/: redis.py  store.py
src/jarvis/: app.py  bot.py  cogs.py  config.py  helpers.py  llama.py  redis.py
